--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,5 @@
 <resources>
     <string name="app_name">WordListRoomSample</string>
-    <string name="add_word">Add Word</string>
-    <string name="hint_word">Word...</string>
-    <string name="button_save">Save</string>
-    <string name="empty_not_saved">Word not saved because it is empty.</string>
+    <string name="add_word">Add Item</string>
+    <string name="hint_word">Word…</string>
 </resources>
