--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">WordListRoomSample</string>
     <string name="add_word">Add Item</string>
     <string name="hint_word">Word…</string>
+    <string name="list_header">-</string>
 </resources>
